force-app/main/default/objects/Promotion_Data__c/Promotion_Data__c.object-meta.xml
<CustomObject>
    <description>Some promotions are run outside of SFDC.  If reporting is needed on both the Opps in SFDC and the data outside of SFDC, this object will provide a place to put the data for reporting.</description>
    <label>Promotion Data</label>
    <nameField>
        <label>Promotion Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>