force-app/main/default/objects/Promotion_Data__c/fields/Acceptance_Type__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Type__c</fullName>
    <description>if(AND(Accepted__c = True,Recommended__c = True),&quot;Recommended &amp; Accepted&quot;,
  if(and(Accepted__c = True,Recommended__c = False), &quot;Not Recommended &amp; Accepted&quot;,
    if(and(Accepted__c = False,Recommended__c = True), &quot;Recommended &amp; Not Accepted&quot;,null</description>
    <label>Acceptance Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>