force-app/main/default/objects/Promotion_Data__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the recommendation was accepted.</description>
    <label>Accepted?</label>
    <type>Checkbox</type>
</CustomField>