force-app/main/default/objects/Promotion_Data__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The product category of the Opportunity</description>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>