force-app/main/default/objects/Promotion_Data__c/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Opportunity was recommended or not.</description>
    <label>Recommended?</label>
    <type>Checkbox</type>
</CustomField>