force-app/main/default/objects/Promotion_Data__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotion Data</relationshipLabel>
    <relationshipName>Promotion_Data</relationshipName>
    <type>Lookup</type>
</CustomField>