force-app/main/default/objects/Promotion_Data__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Promotion Data</relationshipLabel>
    <relationshipName>Promotion_Data</relationshipName>
    <type>Lookup</type>
</CustomField>