force-app/main/default/objects/Promotion_Data__c/fields/Related_PSR__c.field-meta.xml
<CustomField>
    <fullName>Related_PSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Sales Rep associated with the Opportunity</description>
    <label>Primary Sales Rep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Promotion Data</relationshipLabel>
    <relationshipName>Promotion_Data</relationshipName>
    <type>Lookup</type>
</CustomField>