force-app/main/default/objects/Promotion_Data__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Segment of the Opportunity</description>
    <label>Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>